--- a/gb/20/11/28/n12581710.md
+++ b/gb/20/11/28/n12581710.md
@@ -1,17 +1,17 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/oqtvub337/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/oqtvub337/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/oqtvub337/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/oqtvub337/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/oqtvub337/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/oqtvub337/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/oqtvub337/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/oqtvub337/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/oqtvub337/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/oqtvub337/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/oqtvub337/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/oqtvub337/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/oqtvub337/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/oqtvub337/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/oqtvub337/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/oqtvub337/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/oqtvub337/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/oqtvub337/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/oqtvub337/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/oqtvub337/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/oqtvub337/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/oqtvub337/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/oqtvub337/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/oqtvub337/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/oqtvub337/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/oqtvub337/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/oqtvub337/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/oqtvub337/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/oqtvub337/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/oqtvub337/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/oqtvub337/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/oqtvub337/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/oqtvub337/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/oqtvub337/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/oqtvub337/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/oqtvub337/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/oqtvub337/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/oqtvub337/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/oqtvub337/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/oqtvub337/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/oqtvub337/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/oqtvub337/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/oqtvub337/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/oqtvub337/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/oqtvub337/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/oqtvub337/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/oqtvub337/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/hoxgwd311/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/hoxgwd311/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/hoxgwd311/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>【财商天下】感恩节启示 川普创纪录的经济数据</h2>
-<a href="https://git.io/JkbDD"><img width="600" src="https://raw.githubusercontent.com/oqtvub337/djy/master/gb/300/djtsp.jpg"title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/oqtvub337/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3>
+<a href="https://d2zq9v5psazuww.cloudfront.net/L7kXU9x2b"><img width="600" src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/hoxgwd311/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3>
 <h6>【财商天下】感恩节由来揭示美国立国之本。川普留给美国最伟大的记忆，不是创纪录的经济数据和外交成果，而是他承受暴风骤雨般的攻击依然唤醒了美国人。（大纪元香港新闻中心）
 </h6>
 <hr>
-	<p>【大纪元2020年11月28日讯】每年11月的第4个星期四是美国的<ahref="https://github.com/oqtvub337/djy/blob/master/gb/tag/%E6%84%9F%E6%81%A9%E8%8A%82.md#1">感恩节</a>（Thanksgiving Day），11月26日美国人又迎来了这个传统的节日，对美国人来说，感恩节是个阖家团聚、亲切温暖的重要节日。</p>
-<p><ahref="https://github.com/oqtvub337/djy/blob/master/gb/tag/%E5%B7%9D%E6%99%AE.md#1">川普</a>总统也在这个日子发布了一份<ahref="https://github.com/oqtvub337/djy/blob/master/gb/tag/%E6%84%9F%E6%81%A9%E8%8A%82.md#1">感恩节</a>公告，公告中说：“感恩神赐予我们生命中的洪大护佑。当我们与亲友相聚一堂，庆祝这个充满慷慨、希望和感恩的节日时，我们也纪念美国建立在<ahref="https://github.com/oqtvub337/djy/blob/master/gb/tag/%E4%BF%A1%E4%BB%B0.md#1">信仰</a>、家庭和友谊基础上的立国传统，并感谢自由和民主的原则，让美国成为世界历史上杰出的国家。”</p>
-<p><ahref="https://github.com/oqtvub337/djy/blob/master/gb/tag/%E5%B7%9D%E6%99%AE.md#1">川普</a>还在公告中，回顾了第一批美国人出于对<ahref="https://github.com/oqtvub337/djy/blob/master/gb/tag/%E4%BF%A1%E4%BB%B0.md#1">信仰</a>的坚定，历尽艰辛在美洲大陆扎下根来的历史。他说：“1620年‘五月花号’抵达新大陆，标志着民主的第一颗种子来到了这个土地上。”</p>
+	<p>【大纪元2020年11月28日讯】每年11月的第4个星期四是美国的<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E6%84%9F%E6%81%A9%E8%8A%82.md#1">感恩节</a>（Thanksgiving Day），11月26日美国人又迎来了这个传统的节日，对美国人来说，感恩节是个阖家团聚、亲切温暖的重要节日。</p>
+<p><ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E5%B7%9D%E6%99%AE.md#1">川普</a>总统也在这个日子发布了一份<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E6%84%9F%E6%81%A9%E8%8A%82.md#1">感恩节</a>公告，公告中说：“感恩神赐予我们生命中的洪大护佑。当我们与亲友相聚一堂，庆祝这个充满慷慨、希望和感恩的节日时，我们也纪念美国建立在<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E4%BF%A1%E4%BB%B0.md#1">信仰</a>、家庭和友谊基础上的立国传统，并感谢自由和民主的原则，让美国成为世界历史上杰出的国家。”</p>
+<p><ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E5%B7%9D%E6%99%AE.md#1">川普</a>还在公告中，回顾了第一批美国人出于对<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E4%BF%A1%E4%BB%B0.md#1">信仰</a>的坚定，历尽艰辛在美洲大陆扎下根来的历史。他说：“1620年‘五月花号’抵达新大陆，标志着民主的第一颗种子来到了这个土地上。”</p>
 <p>说到感恩节，其由来可以追溯到美国的发端。目前一个流传的版本是，1621年，刚刚踏上北美新大陆的英国清教徒和当地的印地安人共同举行秋收盛宴，感谢印地安人帮助他们挺过最艰难的第一年。</p>
 <p>而历史上，真正感恩节的源起，则蕴藏着深厚的信仰内涵，我们接下来就说说这个感恩节由来的真实版本。</p>
-<p><a src=""></a><a href="https://git.io/JkbDD"><img width="600" src="https://raw.githubusercontent.com/oqtvub337/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/oqtvub337/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><hr><a src="https://www.youtube.com/embed/2Nz8bG3YKtk" width="560" b="315" frameborder="0" allowfullscreen="allowfullscreen"></a></p>
+<p><a src=""></a><a href="https://d2zq9v5psazuww.cloudfront.net/L7kXU9x2b"><img width="600" src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/hoxgwd311/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youtube.com/embed/2Nz8bG3YKtk" width="560" b="315" frameborder="0" allowfullscreen="allowfullscreen"></a></p>
 <h2>感恩节 源于信仰</h2>
 <p>被称为美国“感恩节之父”的威廉．布雷福德（William Bradford），也是这片土地上最早的总督，在他的著作《普利茅斯拓荒记》（Of Plymouth Plantation）中记述了这段时期的历史。</p>
 <p>大概在400年前，也就是1620年9月，102名英国清教徒满怀憧憬，乘坐着“五月花号”木制帆船从英格兰出发，经过两个月后抵达了北美麻萨诸塞州，建立了新普利茅斯定居地。</p>
@@ -57,53 +57,52 @@
 <p>知名评论人士陈破空认为，美国的左派媒体给川普贴了很多标签。但川普是特立独行的人，风格跟体制内的共和党、民主党或者建制派体制内的人都不一样，川普剽悍的作风及独到的政策，让美国真正再次强大起来。</p>
 <p>陈破空说：“要不是这场大瘟疫的话，川普是历史上最有作为的总统，执政3年就把美国的经济搞得50年来最强劲的增长，最高的就业率、最低的失业率、最高的股市，连黑人妇女的就业率都达到了最高峰，支持他的民众超过一半。”</p>
 <p>陈破空还认为，川普是带着反击共产中共这一使命而来，而且在美国总统中第一个清醒认识到共产中国的危害。川普已经形成一个象征，是西方反击中共的象征，是民主的象征。川普外交上的最大成就就是最大程度地攻击了中共，最大程度地建立了国际联盟，尤其在亚洲建立了亚太联盟。</p>
-<p>一名网民也在推特上表达了自己的看法，他说川普将来留给美国最伟大的记忆，不是那些创纪录的<ahref="https://github.com/oqtvub337/djy/blob/master/gb/tag/%E7%BB%8F%E6%B5%8E%E6%95%B0%E6%8D%AE.md#1">经济数据</a>和外交成果，而是他承受着暴风骤雨般的攻击依然唤醒了美国人。</p>
+<p>一名网民也在推特上表达了自己的看法，他说川普将来留给美国最伟大的记忆，不是那些创纪录的<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E7%BB%8F%E6%B5%8E%E6%95%B0%E6%8D%AE.md#1">经济数据</a>和外交成果，而是他承受着暴风骤雨般的攻击依然唤醒了美国人。</p>
 <p>策划：许巧茹、宇文铭<br />
 主播：尉然<br />
 撰文：宇文铭、高紫檀、骆亚、财商经济研究所<br />
-<ahref="https://github.com/oqtvub337/djy/blob/master/gb/tag/%E8%B4%A2%E5%95%86%E5%A4%A9%E4%B8%8B.md#1">财商天下</a>：<ahref="http://https：//www.youtube.com/playlist?list=PL-So5dawJ61r39w1eqiwLEggD-WT0Rjh8">https：//www.youtube.com/playlist?list=PL-So5dawJ61r39w1eqiwLEggD-WT0Rjh8</a></p>
+<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E8%B4%A2%E5%95%86%E5%A4%A9%E4%B8%8B.md#1">财商天下</a>：<ahref="http://https：//www.youtube.com/playlist?list=PL-So5dawJ61r39w1eqiwLEggD-WT0Rjh8">https：//www.youtube.com/playlist?list=PL-So5dawJ61r39w1eqiwLEggD-WT0Rjh8</a></p>
 <p>责任编辑：连书华 ＃</p>
 	
 <hr>
 <hr>
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/oqtvub337/djy/blob/master/gb/20/11/24/n12572125.md#1">【财商天下】内循环陷死循环 习急喊加入CPTPP</a></li>
-<li><a href="https://github.com/oqtvub337/djy/blob/master/gb/20/11/25/n12575286.md#1">【财商天下】金融窟窿难堵 中共乱局已成</a></li>
-<li><a href="https://github.com/oqtvub337/djy/blob/master/gb/20/11/26/n12577737.md#1">【财商天下】公私合营复活？“待割韭菜”出逃</a></li>
-<li><a href="https://github.com/oqtvub337/djy/blob/master/gb/20/11/27/n12580307.md#1">【财商天下】传马云被边控 旗下蛋壳公寓出事</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/11/24/n12572125.md#1">【财商天下】内循环陷死循环 习急喊加入CPTPP</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/11/25/n12575286.md#1">【财商天下】金融窟窿难堵 中共乱局已成</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/11/26/n12577737.md#1">【财商天下】公私合营复活？“待割韭菜”出逃</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/11/27/n12580307.md#1">【财商天下】传马云被边控 旗下蛋壳公寓出事</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/11/3/n10828040.md#1" target="_blank">大饥荒是中共有计划的屠杀手段（中）</a></li><li><a href="https://github.com/oqtvub337/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank">中共迫害良心律师</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/13/9/14/n3964268.md#1" target="_blank">追查国际关于中共活摘法轮功学员器官证据专辑（2）</a></li><hr>
+<li><a href="https://github.com/ychojm359/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank">探寻真相兼听则明</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/3/6/n10195043.md#1" target="_blank">袁斌：中共“苏维埃共和国”的专制实验</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/7/5/n10539350.md#1" target="_blank">中国奥运泳坛明星经历的人生巨变</a></li><hr>
 
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/rymkqn3238/djy/blob/master/gb/20/11/22/n12567180.md#1">曾预言中共病毒 英灵媒再预测2021年大事</a></li>
-<li><a href="https://github.com/rymkqn3238/djy/blob/master/gb/20/11/16/n12553592.md#1">美国大十字日全食带预言川普大选及末世大决战</a></li>
-<li><a href="https://github.com/rymkqn3238/djy/blob/master/gb/20/11/20/n12563807.md#1">《诸世纪》中第一个“反救世主”魔鬼是谁？</a></li>
-<li><a href="https://github.com/rymkqn3238/djy/blob/master/gb/20/11/26/n12576644.md#1">木星与土星在冬至相合 800年来罕见天象</a></li>
-<li><a href="https://github.com/rymkqn3238/djy/blob/master/gb/20/11/25/n12575381.md#1">救命之恩 “新世纪影视”演员感恩李洪志大师（中）</a></li>
-<li><a href="https://github.com/rymkqn3238/djy/blob/master/gb/20/11/16/n12552518.md#1">【欺世大观】为中共立功的特务 个个难逃厄运</a></li>
-<li><a href="https://github.com/rymkqn3238/djy/blob/master/gb/20/11/23/n12570471.md#1">3种豆煮汤喝去湿气 中医妙方击退湿疹、干癣</a></li>
-<li><a href="https://github.com/rymkqn3238/djy/blob/master/gb/20/11/27/n12580533.md#1">【新闻看点】鲍威尔或炸翻乔州 Dominion被深度曝光</a></li>
-<li><a href="https://github.com/rymkqn3238/djy/blob/master/gb/20/11/26/n12576905.md#1">【大选更新11·26】律师：感谢川普总统</a></li>
-<li><a href="https://github.com/rymkqn3238/djy/blob/master/gb/20/10/9/n12463902.md#1">【内幕】中共隐瞒文昌航天发射场突发事件</a></li>
-<li><a href="https://github.com/rymkqn3238/djy/blob/master/gb/20/11/26/n12576238.md#1">鲍威尔乔州提交百页诉状 被指如炸弹之母</a></li>
-<li><a href="https://github.com/rymkqn3238/djy/blob/master/gb/20/11/26/n12578100.md#1">范冰冰复出再遇阻？中共广电总局又发禁令</a></li>
-<li><a href="https://github.com/rymkqn3238/djy/blob/master/gb/20/11/26/n12577188.md#1">谢金燕制作人吕晓栋猝逝 传倒卧高以翔墓园旁</a></li>
-<li><a href="https://github.com/rymkqn3238/djy/blob/master/gb/20/11/25/n12575491.md#1">遭旧爱追款现身法庭 星爷笑言高院是否要装修</a></li>
-<li><a href="https://github.com/rymkqn3238/djy/blob/master/gb/20/11/25/n12575280.md#1">章子怡为小苹果庆生 两人相互依偎似亲母女</a></li>
-<li><a href="https://github.com/rymkqn3238/djy/blob/master/gb/20/11/27/n12580299.md#1">吴秀波小三狱中近况曝光 遭拴铁链成严管对象</a></li>
-<li><a href="https://github.com/rymkqn3238/djy/blob/master/gb/20/11/25/n12574162.md#1">天外飞来的？ 美国沙漠惊现神秘金属巨柱</a></li>
-<li><a href="https://github.com/rymkqn3238/djy/blob/master/gb/20/11/26/n12576644.md#1">木星与土星在冬至相合 800年来罕见天象</a></li>
-<li><a href="https://github.com/rymkqn3238/djy/blob/master/gb/20/11/26/n12576231.md#1">超萌拉布拉多犬 台海关缉毒犬宝宝开放寄养</a></li>
-<li><a href="https://github.com/rymkqn3238/djy/blob/master/gb/20/11/25/n12573264.md#1">容易被激怒？压制火气你要学会这样说话</a></li>
-<li><a href="https://github.com/rymkqn3238/djy/blob/master/gb/20/11/27/n12579069.md#1">美国警察组成人链 惊险抢救开车入河的女子</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/4/20/n13716382.md#1">【百年真相】打抱不平的侠女 为何被枪杀取肾？</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/15/n13737123.md#1">一曲《梅花》为何总让人禁不住热泪盈眶</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/16/n13738009.md#1">【未解之谜】动物的超能力</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/13/n13734962.md#1">【未解之谜】霍皮预言“大净化” 毁灭与希望同在？</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/4/n13726629.md#1">【命相漫谈】怎么说“财多如何不发财？”</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/19/n13741045.md#1">【神韵早期节目】唐玄宗游月宫（2013年制作）</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/19/n13741053.md#1">【财商天下】大陆消费和信贷塌方 失业率创新高</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/19/n13740913.md#1">【时事军事】俄军与M777第一次对话 就尝到滋味</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13740226.md#1">紧跟中共的大V遭封杀 对五毛粉红造成冲击</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13739710.md#1">大陆两卫健委官员批清零政策  被指不寻常</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13740103.md#1">传广西销毁捧习“口袋书” 相关报导已全删</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13739984.md#1">介绍田中老家 任贤齐吃喝不花钱 自嘲像恶霸</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/17/n13739409.md#1">刘嘉玲为学霸侄子庆生 亿万身家未来或留给对方</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13739664.md#1">赵小侨怀孕30周报喜 晒孕照“想得更多祝福 ”</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13740144.md#1">被问会否与周润发再合作 钟楚红：一定不拒绝</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/17/n13739444.md#1">陈晓旭去世15周年 薛宝钗扮演者张莉贴照缅怀</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/17/n13739418.md#1">癌细胞没它会饿死？1个防癌绝佳方法 人人能做到</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13739808.md#1">搭飞机如何穿衣服比较好？ 空服员分享经验</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/13/n13735397.md#1">心脏衰竭比癌症更致命！年轻也出现 3症状要警惕</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/11/n13733128.md#1">睡醒有眼屎不是坏事！但眼屎过多小心3大警讯</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/16/n13738702.md#1">【健康1+1】新冠、疫苗刺突蛋白 2大方法解毒</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/oqtvub337/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/oqtvub337/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/11/28/n12581710.htm">【财商天下】感恩节启示 川普创纪录的经济数据</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/hoxgwd311/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/hoxgwd311/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/11/28/n12581710.htm">【财商天下】感恩节启示 川普创纪录的经济数据</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/oqtvub337/djy/blob/master/gb/20/11/28/n12581710.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/oqtvub337/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oqtvub337/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/oqtvub337/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/oqtvub337/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/oqtvub337/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oqtvub337/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/oqtvub337/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oqtvub337/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/oqtvub337/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oqtvub337/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/oqtvub337/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oqtvub337/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/oqtvub337/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oqtvub337/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/oqtvub337/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oqtvub337/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/oqtvub337/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oqtvub337/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/oqtvub337/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oqtvub337/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/oqtvub337/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oqtvub337/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/oqtvub337/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oqtvub337/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/oqtvub337/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oqtvub337/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/oqtvub337/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oqtvub337/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/oqtvub337/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oqtvub337/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/oqtvub337/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oqtvub337/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/oqtvub337/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oqtvub337/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/oqtvub337/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oqtvub337/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/oqtvub337/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oqtvub337/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/oqtvub337/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oqtvub337/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/oqtvub337/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oqtvub337/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/oqtvub337/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oqtvub337/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/oqtvub337/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oqtvub337/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/oqtvub337/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oqtvub337/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/hoxgwd311/djy/blob/master/gb/20/11/28/n12581710.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/hoxgwd311/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/hoxgwd311/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/hoxgwd311/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
